Fix issue where popover filter label is not visible (Popover Display Mode story). Fix issue where storybook was getting an error (RangeError: Maximum call stack size exceeded)

--- a/packages/mantine-react-table/src/components/head/MRT_TableHeadCellFilterLabel.module.css
+++ b/packages/mantine-react-table/src/components/head/MRT_TableHeadCellFilterLabel.module.css
@@ -6,10 +6,7 @@
     var(--mantine-color-gray-1),
     var(--mantine-color-dark-6)
   );
-  --ai-color: light-dark(
-    var(--mantine-color-gray-5),
-    var(--mantine-color-dark-3)
-  );
+  color: var(--mantine-color-bright);
   &[data-active] {
     color: var(--mantine-primary-color-filled);
   }
